[gd_scene load_steps=2 format=3 uid="uid://7qblcvp8q87d"]

[ext_resource type="Script" path="res://Menu/Scripts/payload_menu.gd" id="1_edd14"]

[node name="EventPayloadsMenu" type="Panel"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_edd14")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -463.5
offset_top = 48.0
offset_right = 463.5
offset_bottom = 648.0
grow_horizontal = 2

[node name="EventPanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EventLabel" type="Label" parent="VBoxContainer/EventPanelContainer"]
layout_mode = 2
text = "Event Payloads"
horizontal_alignment = 1

[node name="HeaderHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(30, 31)
layout_mode = 2
text = "#
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(0, 490)
layout_mode = 2
vertical_scroll_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/ScrollContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddPayload" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Event Payload"

[node name="RemovePayload" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Event Payload"

[connection signal="pressed" from="VBoxContainer/ButtonContainer/AddPayload" to="." method="_on_add_payload_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/RemovePayload" to="." method="_on_remove_payload_pressed"]
